# cmake_learning

src/101_first_cmake/: 101first_cmake.cpp  CMakeLists.txt
src/101_first_cmake/nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
src/102cmake_lib/: CMakeLists.txt
src/102cmake_lib/build2/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_xlog.vcxproj  test_xlog.vcxproj.filters  xlog.sln  xlog.vcxproj  xlog.vcxproj.filters
src/102cmake_lib/test_xlog/: CMakeLists.txt  test_xlog.cpp
src/102cmake_lib/xlog/: CMakeLists.txt  xlog.cpp  xlog.h
src/103_message/: CMakeLists.txt  log.txt  log_err.txt
src/103_message/b/: CMakeCache.txt
src/103_message/b1/: CMakeCache.txt
src/104_test_var/: CMakeLists.txt
src/105_message_color/: CMakeLists.txt
src/105_message_color/b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ColorfulMessages.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/106_system_var/: CMakeLists.txt  xlog.h
src/107_cmake_include/: CMakeLists.txt
src/107_cmake_include/b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_include.sln  cmake_install.cmake
src/107_cmake_include/cmake/: test_camke.cmake
src/108_auto_src/: CMakeLists.txt  main.cpp
src/108_auto_src/include/: xlog.h
src/108_auto_src/src/: xlog.cpp
src/201_cmake_if/: CMakeLists.txt
src/201_cmake_if/b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  (+2 more)
(+29 files in other folders)
